--- a/app/src/main/res/layout/discard_change.xml
+++ b/app/src/main/res/layout/discard_change.xml
@@ -20,7 +20,8 @@
         android:id="@+id/txtIsland"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textColor="#F11F67" />
 
     <LinearLayout
         android:layout_width="match_parent"
